18.2.7-analytics-on/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-analytics-on
  namespace: avi-feature
  labels:
    feature: analytics-on 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: analytics-on
